--- a/style.css
+++ b/style.css
@@ -12,4 +12,18 @@
   text-align: center;
 }
 
+.images {
+  width: 30px;
+  height: 30px;
+}
+
+.button {
+  background-color: chartreuse;
+}
+
+.cheese {
+  background-color: yellow;
+  border: 10px red;
+}
+
 
